gha: make the latest-gcc test a Debug build

--- a/.github/workflows/testing-gcc.yml
+++ b/.github/workflows/testing-gcc.yml
@@ -22,6 +22,7 @@ jobs:
         mkdir -p build
         cd build
         cmake -G Ninja \
+          -DCMAKE_BUILD_TYPE=Debug \
           -DUSE_MPI=OFF \
           -DUSE_OPENMP=ON \
           -DUSE_SMM=blas \
