--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,7 +6,7 @@ set(DBCSR_PROGRAM_SRCS_CPP dbcsr_example_3.cpp dbcsr_tensor_example_2.cpp)
 # Compile Fortran examples
 foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS_FTN})
   get_filename_component(dbcsr_program_name ${dbcsr_program_src} NAME_WE)
-  if (USE_HIP)
+  if (USE_ACCEL MATCHES "hip")
     hip_add_executable(${dbcsr_program_name} ${dbcsr_program_src})
   else ()
     add_executable(${dbcsr_program_name} ${dbcsr_program_src})
@@ -24,7 +24,7 @@ if (WITH_C_API)
   foreach (dbcsr_program_src ${DBCSR_PROGRAM_SRCS_CPP})
     get_filename_component(dbcsr_program_name ${dbcsr_program_src} NAME_WE)
     set(dbcsr_program_name ${dbcsr_program_name}_cpp)
-    if (USE_HIP)
+    if (USE_ACCEL MATCHES "hip")
       hip_add_executable(${dbcsr_program_name} ${dbcsr_program_src})
     else ()
       add_executable(${dbcsr_program_name} ${dbcsr_program_src})
