--- a/src/cmake/DBCSRConfig.cmake.in
+++ b/src/cmake/DBCSRConfig.cmake.in
@@ -12,13 +12,13 @@ if (@USE_OPENMP@)
   find_dependency(OpenMP)
 endif ()
 
-if (@USE_CUDA@)
+if ("@USE_ACCEL@" MATCHES "cuda")
   enable_language(CUDA)
 endif ()
 
-if ("@USE_SMM@" MATCHES "libxsmm")
+if (("@USE_SMM@" MATCHES "libxsmm") OR ("@USE_ACCEL@" MATCHES "opencl"))
   find_package(PkgConfig)
-  pkg_check_modules(deps REQUIRED IMPORTED_TARGET libxsmmf)
+  pkg_check_modules(LIBXSMM IMPORTED_TARGET GLOBAL libxsmmf)
 endif ()
 
 include("${CMAKE_CURRENT_LIST_DIR}/DBCSRTargets.cmake")
