Another attempt to fix cross-dependency in CUDA/HIP backend.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -171,6 +171,7 @@ if (WITH_C_API)
   foreach (dbcsr_test_c ${DBCSR_TESTS_C})
     if (USE_ACCEL MATCHES "hip")
       hip_add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
+      target_link_libraries(${dbcsr_test_c} dbcsr)
     else ()
       add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
     endif ()
