One more attempt to fix cross-dependencies.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -171,10 +171,10 @@ if (WITH_C_API)
   foreach (dbcsr_test_c ${DBCSR_TESTS_C})
     if (USE_ACCEL MATCHES "hip")
       hip_add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
-      target_link_libraries(${dbcsr_test_c} dbcsr)
     else ()
       add_executable(${dbcsr_test_c} ${${dbcsr_test_c}_SRCS})
     endif ()
+    target_link_libraries(${dbcsr_test_c} libsmm_acc)
     target_link_libraries(${dbcsr_test_c} dbcsr_c)
     # register unittest executable with CMake
     if (USE_MPI)
