--- a/src/acc/libsmm_acc/CMakeLists.txt
+++ b/src/acc/libsmm_acc/CMakeLists.txt
@@ -46,11 +46,9 @@ if (USE_ACCEL MATCHES "cuda")
 
 elseif (USE_ACCEL MATCHES "hip")
 
-  set_source_files_properties(${LIBSMM_ACC_SRC_FILES}
-                              PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
-
   set(HIP_HCC_FLAGS ${HIP_HCC_FLAGS} -fno-gpu-rdc)
   hip_add_library(libsmm_acc SHARED ${LIBSMM_ACC_FILES})
+  target_compile_definitions(libsmm_acc PRIVATE __HIP_PLATFORM_HCC__)
   target_link_libraries(libsmm_acc INTERFACE "stdc++")
   target_link_libraries(libsmm_acc PUBLIC roc::hipblas)
 
