use hip::host to get the proper defines etc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -328,8 +328,7 @@ if (USE_ACCEL MATCHES "hip")
   hip_add_library(acc SHARED ${DBCSR_ACC_SRCS})
   target_compile_definitions(acc PRIVATE ARCH_NUMBER=${ACC_ARCH_NUMBER})
   target_compile_definitions(acc PRIVATE __HIP)
-  target_compile_definitions(acc PRIVATE __HIP_PLATFORM_HCC__)
-  target_link_libraries(acc PUBLIC roc::hipblas)
+  target_link_libraries(acc PUBLIC roc::hipblas hip::host)
   target_link_libraries(dbcsr PUBLIC acc)
   install(
     TARGETS acc
