Implemented loading tuned parameters embedded into binary or from file.
* Ensure initialization/finalization is outside of parallel region (BE and LIBSMM).
* OPENCL_LIBSMM_PARAMS_DELIMS are used to tokenize parameters (CSV file).
* Print type-id in addition to name of element type (benchmark drivers).
* Regex to match console output; optional CSV file (tune_multiply.py).
* JSON/CSV: store type-id rather than typename (smaller).
* Introduced (optional) parameter file to Make and CMake.
* Improved help/usage message, and handling errors (acc_opencl.sh).
* Support CSV parameter file (acc_opencl.sh).
* License banner (acc_opencl.sh).

--- a/src/acc/opencl/Makefile
+++ b/src/acc/opencl/Makefile
@@ -98,7 +98,7 @@ bench: ../acc_bench_smm ../acc_bench_trans
 test: ../dbcsr_acc_test
 
 smm/opencl_kernels.h: acc_opencl.sh $(KERNEL)
-	./acc_opencl.sh $(KERNEL) $@
+	./acc_opencl.sh $(KERNEL) smm/tune_multiply.csv $@
 
 ../dbcsr_acc.a: $(OBJACC)
 	$(AR) -rs $@ $^
